--- a/FundMon/Pages/PortfolioZoomPage.xaml
+++ b/FundMon/Pages/PortfolioZoomPage.xaml
@@ -3,6 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FundMon.Pages"
+    xmlns:repo="using:FundMon.Repository
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -10,5 +11,17 @@
 
     <StackPanel Orientation="Vertical" Margin="10">
         <TextBlock Text="Portefeuille" Style="{ThemeResource TitleTextBlockStyle}" x:Name="TitleTextBox"/>
+        <GridView 
+            x:Name="FundGridView"
+            IsDoubleTapEnabled="True"
+            DoubleTapped="FundGridView_DoubleTapped"
+            ItemsSource="{x:Bind ViewModel.Funds}"
+            >
+            <GridView.ItemTemplate>
+            <DataTemplate x:DataType="repo:Fund">
+                
+            </DataTemplate>
+            </GridView.ItemTemplate>
+        </GridView>
     </StackPanel>
 </Page>
