--- a/FundMon/Pages/PortfolioZoomPage.xaml
+++ b/FundMon/Pages/PortfolioZoomPage.xaml
@@ -3,7 +3,7 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:local="using:FundMon.Pages"
-    xmlns:repo="using:FundMon.Repository
+    xmlns:repo="using:FundMon.Repository"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d"
@@ -13,15 +13,51 @@
         <TextBlock Text="Portefeuille" Style="{ThemeResource TitleTextBlockStyle}" x:Name="TitleTextBox"/>
         <GridView 
             x:Name="FundGridView"
+            Margin="10,20,10,0" 
             IsDoubleTapEnabled="True"
             DoubleTapped="FundGridView_DoubleTapped"
-            ItemsSource="{x:Bind ViewModel.Funds}"
+            SelectionChanged="FundGridView_SelectionChanged"
+            ItemsSource="{x:Bind ViewModel.PortfolioFundsPerformance, Mode=OneWay}"
             >
-            <GridView.ItemTemplate>
-            <DataTemplate x:DataType="repo:Fund">
-                
+        <GridView.ItemTemplate>
+            <DataTemplate x:DataType="repo:FundPerformance">
+                <StackPanel Orientation="Vertical">
+                    <TextBlock Text="{x:Bind Fund.Name}" Style="{ThemeResource SubtitleTextBlockStyle}" />
+                    <TextBlock Text="{x:Bind LastWeekValue}" Style="{ThemeResource CaptionTextBlockStyle}" />
+                </StackPanel>
             </DataTemplate>
+        </GridView.ItemTemplate>
+        </GridView>
+
+        <StackPanel Orientation="Horizontal">
+            <TextBox x:Name="FundSearchTextBox" PlaceholderText="Nom ou ID du fond" TextChanged="FundSearchTextBox_TextChanged"/>
+            <Button x:Name="FundSearchButton" Click="FundSearchButton_Click" IsEnabled="False">Chercher</Button>
+        </StackPanel>
+
+        <GridView x:Name="FundSearchGridView" ItemsSource="{x:Bind ViewModel.MorningstarResults, Mode=OneWay}" Margin="30,10,10,0" SelectionChanged="FundSearchGridView_SelectionChanged">
+            <GridView.ItemTemplate>
+                <DataTemplate x:DataType="repo:MorningstarResponseLine">
+                    <Grid ColumnSpacing="5" Margin="5">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="Auto" MinWidth="10" />
+                            <ColumnDefinition Width="Auto" MinWidth="10" />
+                        </Grid.ColumnDefinitions>
+                        <TextBlock Grid.Column="0" Grid.Row="0"><Italic>Nom</Italic></TextBlock>
+                        <TextBlock Text="{x:Bind Name}" Grid.Column="1" Grid.Row="0"/>
+                        <TextBlock Grid.Column="0" Grid.Row="1"><Italic>Catégorie</Italic></TextBlock>
+                        <TextBlock Text="{x:Bind Category}" Grid.Column="1" Grid.Row="1"/>
+                        <TextBlock Grid.Column="0" Grid.Row="2"><Italic>ID</Italic></TextBlock>
+                        <TextBlock Text="{x:Bind MorningStarID}" Grid.Column="1" Grid.Row="2"/>
+                    </Grid>
+                </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
+        <Button Margin="30" x:Name="AddFundButton" Click="AddFundButton_Click" IsEnabled="False">Ajouter le fond</Button>
     </StackPanel>
 </Page>
