--- a/FundMon/Pages/PortfolioZoomPage.xaml
+++ b/FundMon/Pages/PortfolioZoomPage.xaml
@@ -33,6 +33,7 @@
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
                             <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
                         </Grid.RowDefinitions>
                         <TextBlock Text="Coût moyen" Grid.Column="0" Grid.Row="0" Style="{ThemeResource CaptionTextBlockStyle}" />
                         <TextBlock Text="{x:Bind format:Formatter.PerformanceValueFormatter(AverageCost)}" 
@@ -47,6 +48,11 @@
                         <TextBlock Text="Semaine dernière" Grid.Column="0" Grid.Row="2" Style="{ThemeResource CaptionTextBlockStyle}" />
                         <TextBlock Text="{x:Bind format:Formatter.PerformanceValueFormatter(LastWeekValue)}"
                                    Grid.Column="1" Grid.Row="2" 
+                                   Style="{ThemeResource CaptionTextBlockStyle}" 
+                                   HorizontalAlignment="Right"/>
+                        <TextBlock Text="Mois dernier" Grid.Column="0" Grid.Row="3" Style="{ThemeResource CaptionTextBlockStyle}" />
+                        <TextBlock Text="{x:Bind format:Formatter.PerformanceValueFormatter(LastMonthValue)}"
+                                   Grid.Column="1" Grid.Row="3" 
                                    Style="{ThemeResource CaptionTextBlockStyle}" 
                                    HorizontalAlignment="Right"/>
                     </Grid>
