--- a/FundMon/Pages/PortfoliosPage.xaml
+++ b/FundMon/Pages/PortfoliosPage.xaml
@@ -21,8 +21,8 @@
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="repo:Portfolio">
                     <StackPanel Orientation="Vertical" Padding="10">
-                        <TextBlock Text="{x:Bind Name}" Style="{ThemeResource SubtitleTextBlockStyle}"/>
-                        <TextBlock Text="{x:Bind Description}" Style="{ThemeResource CaptionTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Name, Mode=OneWay}" Style="{ThemeResource SubtitleTextBlockStyle}"/>
+                        <TextBlock Text="{x:Bind Description, Mode=OneWay}" Style="{ThemeResource CaptionTextBlockStyle}"/>
                     </StackPanel>
                 </DataTemplate>
             </GridView.ItemTemplate>
