--- a/FundMon/Pages/PortfolioZoomPage.xaml
+++ b/FundMon/Pages/PortfolioZoomPage.xaml
@@ -2,93 +2,156 @@
     x:Class="FundMon.Pages.PortfolioZoomPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FundMon.Pages"
-    xmlns:repo="using:FundMon.Repository"
     xmlns:controls1="using:CommunityToolkit.WinUI.UI.Controls"
+    xmlns:converter="using:FundMon.Converters"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
-    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    xmlns:local="using:FundMon.Pages"
+    xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+    xmlns:repo="using:FundMon.Repository"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    mc:Ignorable="d">
 
-    <StackPanel Orientation="Vertical" Margin="10">
+    <Page.Resources>
+        <converter:FrenchDoubleConverter x:Key="doubleConverter" />
+        <converter:CurrencyDisplayConverter x:Key="currencyConverter" />
+        <Style x:Key="rightAlignCellStyle" TargetType="controls1:DataGridCell">
+            <Style.Setters>
+                <Setter Property="HorizontalContentAlignment" Value="Right" />
+            </Style.Setters>
+        </Style>
+    </Page.Resources>
+
+    <StackPanel Margin="10" Orientation="Vertical">
         <StackPanel Orientation="Horizontal" Spacing="10">
             <Button
                 x:Name="BackButton"
                 Click="BackButton_Click"
                 Style="{ThemeResource NavigationBackButtonNormalStyle}"
-                ToolTipService.ToolTip="Liste des portefeuilles"/>
-            <TextBlock Text="Portefeuille" Style="{ThemeResource TitleTextBlockStyle}" x:Name="TitleTextBox"/>
+                ToolTipService.ToolTip="Liste des portefeuilles" />
+            <TextBlock
+                x:Name="TitleTextBox"
+                Style="{ThemeResource TitleTextBlockStyle}"
+                Text="Portefeuille" />
         </StackPanel>
 
-        <controls1:DataGrid 
+        <controls1:DataGrid
             x:Name="FundDataGrid"
-            AutoGenerateColumns="False" 
-            ItemsSource="{x:Bind ViewModel.Performances, Mode=OneWay}" 
-            CanUserReorderColumns="False"
-            IsReadOnly="True"
             MaxHeight="300"
-            VerticalScrollBarVisibility="Auto"
-            SelectionChanged="DataGrid_SelectionChanged">
+            AutoGenerateColumns="False"
+            CanUserReorderColumns="False"
+            ItemsSource="{x:Bind ViewModel.Performances, Mode=OneWay}"
+            SelectionChanged="DataGrid_SelectionChanged"
+            VerticalScrollBarVisibility="Auto">
             <controls1:DataGrid.Columns>
-                <controls1:DataGridTextColumn Header="Nom" Width="Auto" Binding="{Binding Fund.Name}" />
-                <controls1:DataGridTextColumn Header="PRM" Width="Auto" Binding="{Binding EuroAverageCost}">
-                    <controls1:DataGridTextColumn.CellStyle>
-                        <Style TargetType="controls1:DataGridCell">
-                            <Style.Setters>
-                                <Setter Property="HorizontalContentAlignment" Value="Right"/>
-                            </Style.Setters>
-                        </Style>
-                    </controls1:DataGridTextColumn.CellStyle>
-                </controls1:DataGridTextColumn>
-                <controls1:DataGridTextColumn Header="Dernière" Width="Auto" Binding="{Binding EuroLastValue}" />
-                <controls1:DataGridTextColumn Header="Évolution" Width="Auto" Binding="{Binding EuroEvolution}" />
-                <controls1:DataGridTextColumn Header="-1 sem." Width="Auto" Binding="{Binding EuroLastWeekValue}"  />
-                <controls1:DataGridTextColumn Header="-1 mois" Width="Auto" Binding="{Binding EuroLastMonthValue}" />
+                <controls1:DataGridTextColumn
+                    Width="Auto"
+                    Binding="{Binding Fund.Name}"
+                    Header="Nom"
+                    IsReadOnly="True" />
+                <controls1:DataGridTextColumn
+                    Width="Auto"
+                    Binding="{Binding AverageCost, Mode=TwoWay, Converter={StaticResource doubleConverter}}"
+                    CellStyle="{StaticResource rightAlignCellStyle}"
+                    Header="PRM" />
+                <controls1:DataGridTextColumn
+                    Width="Auto"
+                    Binding="{Binding LastValue, Mode=OneWay, Converter={StaticResource currencyConverter}}"
+                    CellStyle="{StaticResource rightAlignCellStyle}"
+                    Header="Dernière"
+                    IsReadOnly="True" />
+                <controls1:DataGridTextColumn
+                    Width="Auto"
+                    Binding="{Binding Evolution, Mode=OneWay, Converter={StaticResource currencyConverter}}"
+                    CellStyle="{StaticResource rightAlignCellStyle}"
+                    Header="Évolution"
+                    IsReadOnly="True" />
+                <controls1:DataGridTextColumn
+                    Width="Auto"
+                    Binding="{Binding LastWeekValue, Mode=OneWay, Converter={StaticResource currencyConverter}}"
+                    CellStyle="{StaticResource rightAlignCellStyle}"
+                    Header="-1 sem."
+                    IsReadOnly="True" />
+                <controls1:DataGridTextColumn
+                    Width="Auto"
+                    Binding="{Binding LastMonthValue, Mode=OneWay, Converter={StaticResource currencyConverter}}"
+                    CellStyle="{StaticResource rightAlignCellStyle}"
+                    Header="-1 mois"
+                    IsReadOnly="True" />
             </controls1:DataGrid.Columns>
         </controls1:DataGrid>
 
-        <StackPanel Orientation="Horizontal" x:Name="SelectedFundStackPanel" Visibility="Collapsed" Spacing="10" Margin="0,10,0,0">
-            <TextBox x:Name="SelectedFundAverageCostTextBox" Header="PRM" TextChanged="SelectedFundAverageCostTextBox_TextChanged" />
-            <Button x:Name="SelectedFundAverageCostEditButton" Content="Changer" Click="SelectedFundAverageCostEditButton_Click" VerticalAlignment="Bottom" />
-            <Button x:Name="SelectedFundDeleteButton" Content="Supprimer" Click="SelectedFundDeleteButton_Click" VerticalAlignment="Bottom" />
+        <StackPanel
+            x:Name="SelectedFundStackPanel"
+            Margin="0,10,0,0"
+            Orientation="Horizontal"
+            Spacing="10"
+            Visibility="Collapsed">
+            <TextBox
+                x:Name="SelectedFundAverageCostTextBox"
+                Header="PRM"
+                TextChanged="SelectedFundAverageCostTextBox_TextChanged" />
+            <Button
+                x:Name="SelectedFundAverageCostEditButton"
+                VerticalAlignment="Bottom"
+                Click="SelectedFundAverageCostEditButton_Click"
+                Content="Changer" />
+            <Button
+                x:Name="SelectedFundDeleteButton"
+                VerticalAlignment="Bottom"
+                Click="SelectedFundDeleteButton_Click"
+                Content="Supprimer" />
         </StackPanel>
-        
+
         <Grid Margin="10">
             <Grid.ColumnDefinitions>
-                <ColumnDefinition Width="1"/>
-                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="1" />
+                <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
-                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
             </Grid.RowDefinitions>
 
-            <Border Grid.Column="0" Grid.RowSpan="3" Background="{ThemeResource ButtonForegroundThemeBrush}"/>
-            <StackPanel Orientation="Horizontal" Spacing="10" Margin="10,0,0,0" Grid.Column="1" Grid.Row="0">
-                <TextBox 
+            <Border
+                Grid.RowSpan="3"
+                Grid.Column="0"
+                Background="{ThemeResource ButtonForegroundThemeBrush}" />
+            <StackPanel
+                Grid.Row="0"
+                Grid.Column="1"
+                Margin="10,0,0,0"
+                Orientation="Horizontal"
+                Spacing="10">
+                <TextBox
                     x:Name="FundSearchTextBox"
                     Header="Recherche MorningStar"
-                    TextChanged="FundSearchTextBox_TextChanged"/>
+                    TextChanged="FundSearchTextBox_TextChanged" />
                 <Button
                     x:Name="FundSearchButton"
-                    Click="FundSearchButton_Click"
-                    IsEnabled="False"
                     VerticalAlignment="Bottom"
-                    Content="Chercher"/>
-                <ProgressRing Visibility="Collapsed" IsIndeterminate="True" x:Name="FundSearchProgressRing" />
+                    Click="FundSearchButton_Click"
+                    Content="Chercher"
+                    IsEnabled="False" />
+                <ProgressRing
+                    x:Name="FundSearchProgressRing"
+                    IsIndeterminate="True"
+                    Visibility="Collapsed" />
             </StackPanel>
 
             <GridView
                 x:Name="FundSearchGridView"
-                Grid.Column="1"
                 Grid.Row="1"
-                ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
+                Grid.Column="1"
                 Margin="30,10,0,0"
+                ItemsSource="{x:Bind ViewModel.Results, Mode=OneWay}"
                 SelectionChanged="FundSearchGridView_SelectionChanged">
                 <GridView.ItemTemplate>
                     <DataTemplate x:DataType="repo:MorningstarResponseLine">
-                        <Grid ColumnSpacing="10" Padding="10" Background="{ThemeResource ButtonPointerOverBackgroundThemeBrush}">
+                        <Grid
+                            Padding="10"
+                            Background="{ThemeResource ButtonPointerOverBackgroundThemeBrush}"
+                            ColumnSpacing="10">
                             <Grid.RowDefinitions>
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
@@ -99,29 +162,57 @@
                                 <ColumnDefinition Width="Auto" MinWidth="10" />
                                 <ColumnDefinition Width="Auto" MinWidth="10" />
                             </Grid.ColumnDefinitions>
-                            <TextBlock Grid.Column="0" Grid.Row="0" Text="Nom" Style="{ThemeResource BodyStrongTextBlockStyle}"/>
-                            <TextBlock Text="{x:Bind Name}" Grid.Column="1" Grid.Row="0"/>
-                            <TextBlock Grid.Column="0" Grid.Row="1" Text="Catégorie" Style="{ThemeResource BodyStrongTextBlockStyle}"/>
-                            <TextBlock Text="{x:Bind Category}" Grid.Column="1" Grid.Row="1"/>
-                            <TextBlock Grid.Column="0" Grid.Row="2" Text="ID" Style="{ThemeResource BodyStrongTextBlockStyle}"/>
-                            <TextBlock Text="{x:Bind MorningStarID}" Grid.Column="1" Grid.Row="2"/>
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="0"
+                                Style="{ThemeResource BodyStrongTextBlockStyle}"
+                                Text="Nom" />
+                            <TextBlock
+                                Grid.Row="0"
+                                Grid.Column="1"
+                                Text="{x:Bind Name}" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="0"
+                                Style="{ThemeResource BodyStrongTextBlockStyle}"
+                                Text="Catégorie" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Grid.Column="1"
+                                Text="{x:Bind Category}" />
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="0"
+                                Style="{ThemeResource BodyStrongTextBlockStyle}"
+                                Text="ID" />
+                            <TextBlock
+                                Grid.Row="2"
+                                Grid.Column="1"
+                                Text="{x:Bind MorningStarID}" />
                         </Grid>
                     </DataTemplate>
                 </GridView.ItemTemplate>
             </GridView>
-            <StackPanel 
+            <StackPanel
                 x:Name="AddFundStackPannel"
-                Grid.Column="1" Grid.Row="2" 
-                Orientation="Horizontal" 
-                Margin="30,0,0,0" 
-                Spacing="20" 
+                Grid.Row="2"
+                Grid.Column="1"
+                Margin="30,0,0,0"
+                Orientation="Horizontal"
+                Spacing="20"
                 Visibility="Collapsed">
-                <TextBox 
-                    x:Name="AverageCostTextBox" 
+                <TextBox
+                    x:Name="AverageCostTextBox"
                     Header="Prix moyen d'achat"
-                    TextChanged="AverageCostTextBox_TextChanged" 
-                    IsEnabled="False"/>
-                <Button x:Name="AddFundButton" Click="AddFundButton_Click" IsEnabled="False" VerticalAlignment="Bottom">Ajouter le fond</Button>
+                    IsEnabled="False"
+                    TextChanged="AverageCostTextBox_TextChanged" />
+                <Button
+                    x:Name="AddFundButton"
+                    VerticalAlignment="Bottom"
+                    Click="AddFundButton_Click"
+                    IsEnabled="False">
+                    Ajouter le fond
+                </Button>
             </StackPanel>
         </Grid>
     </StackPanel>
