--- a/FundMon/Pages/PortfoliosPage.xaml
+++ b/FundMon/Pages/PortfoliosPage.xaml
@@ -2,35 +2,48 @@
     x:Class="FundMon.Pages.PortfoliosPage"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:FundMon.Pages"
-    xmlns:repo="using:FundMon.Repository"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+    xmlns:local="using:FundMon.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    xmlns:repo="using:FundMon.Repository"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    Language="fr-FR"
+    mc:Ignorable="d">
 
-    <StackPanel Orientation="Vertical" Margin="10">
+    <StackPanel Margin="10" Orientation="Vertical">
         <TextBlock Style="{ThemeResource TitleTextBlockStyle}">Portefeuilles</TextBlock>
-        <GridView 
-            ItemsSource="{x:Bind ViewModel.Portfolios, Mode=OneWay}" 
-            Margin="10,20,10,0" 
-            IsDoubleTapEnabled="True" 
-            DoubleTapped="GridView_DoubleTapped" 
-            SelectionChanged="GridView_SelectionChanged"
-            x:Name="GridView">
+        <GridView
+            x:Name="GridView"
+            Margin="10,20,10,0"
+            DoubleTapped="GridView_DoubleTapped"
+            IsDoubleTapEnabled="True"
+            ItemsSource="{x:Bind ViewModel.Portfolios, Mode=OneWay}"
+            SelectionChanged="GridView_SelectionChanged">
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="repo:Portfolio">
-                    <StackPanel Orientation="Vertical" Padding="10">
-                        <TextBlock Text="{x:Bind Name, Mode=OneWay}" Style="{ThemeResource SubtitleTextBlockStyle}"/>
-                        <TextBlock Text="{x:Bind Description, Mode=OneWay}" Style="{ThemeResource CaptionTextBlockStyle}"/>
+                    <StackPanel Padding="10" Orientation="Vertical">
+                        <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" Text="{x:Bind Name, Mode=OneWay}" />
+                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Text="{x:Bind Description, Mode=OneWay}" />
                     </StackPanel>
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
         <StackPanel Orientation="Horizontal" Spacing="10">
-            <TextBox x:Name="NameTextBox" Header="Nom" TextChanged="NameTextBox_TextChanged" MinWidth="100" />
-            <TextBox x:Name="DescriptionTextBox" Header="Description" MinWidth="100" />
-            <Button x:Name="AddButton" Click="AddButton_Click" Content="Ajouter" IsEnabled="False" VerticalAlignment="Bottom"/>
+            <TextBox
+                x:Name="NameTextBox"
+                MinWidth="100"
+                Header="Nom"
+                TextChanged="NameTextBox_TextChanged" />
+            <TextBox
+                x:Name="DescriptionTextBox"
+                MinWidth="100"
+                Header="Description" />
+            <Button
+                x:Name="AddButton"
+                VerticalAlignment="Bottom"
+                Click="AddButton_Click"
+                Content="Ajouter"
+                IsEnabled="False" />
         </StackPanel>
     </StackPanel>
 </Page>
