--- a/FundMon/Pages/PortfolioZoomPage.xaml
+++ b/FundMon/Pages/PortfolioZoomPage.xaml
@@ -8,6 +8,7 @@
     xmlns:local="using:FundMon.Pages"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:repo="using:FundMon.Repository"
+    xmlns:wctprimitives="using:CommunityToolkit.WinUI.UI.Controls.Primitives"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
     mc:Ignorable="d">
 
@@ -41,8 +42,21 @@
             AutoGenerateColumns="False"
             CanUserReorderColumns="False"
             ItemsSource="{x:Bind ViewModel.Performances, Mode=OneWay}"
-            SelectionChanged="DataGrid_SelectionChanged"
             VerticalScrollBarVisibility="Auto">
+            <controls1:DataGrid.RowStyle>
+                <Style TargetType="controls1:DataGridRow">
+                    <Setter Property="controls1:DataGridRow.ContextFlyout">
+                        <Setter.Value>
+                            <MenuFlyout>
+                                <MenuFlyoutItem
+                                    Click="MenuFlyoutDeleteItem_Click"
+                                    Icon="Delete"
+                                    Text="Supprimer" />
+                            </MenuFlyout>
+                        </Setter.Value>
+                    </Setter>
+                </Style>
+            </controls1:DataGrid.RowStyle>
             <controls1:DataGrid.Columns>
                 <controls1:DataGridTextColumn
                     Width="Auto"
@@ -86,28 +100,6 @@
             </controls1:DataGrid.Columns>
         </controls1:DataGrid>
 
-        <StackPanel
-            x:Name="SelectedFundStackPanel"
-            Margin="0,10,0,0"
-            Orientation="Horizontal"
-            Spacing="10"
-            Visibility="Collapsed">
-            <TextBox
-                x:Name="SelectedFundAverageCostTextBox"
-                Header="PRM"
-                TextChanged="SelectedFundAverageCostTextBox_TextChanged" />
-            <Button
-                x:Name="SelectedFundAverageCostEditButton"
-                VerticalAlignment="Bottom"
-                Click="SelectedFundAverageCostEditButton_Click"
-                Content="Changer" />
-            <Button
-                x:Name="SelectedFundDeleteButton"
-                VerticalAlignment="Bottom"
-                Click="SelectedFundDeleteButton_Click"
-                Content="Supprimer" />
-        </StackPanel>
-
         <Grid Margin="10">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="1" />
@@ -132,7 +124,11 @@
                 <TextBox
                     x:Name="FundSearchTextBox"
                     Header="Recherche MorningStar"
-                    TextChanged="FundSearchTextBox_TextChanged" />
+                    TextChanged="FundSearchTextBox_TextChanged">
+                    <TextBox.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="Enter" Invoked="SearchAccelerator_Invoked" />
+                    </TextBox.KeyboardAccelerators>
+                </TextBox>
                 <Button
                     x:Name="FundSearchButton"
                     VerticalAlignment="Bottom"
@@ -159,14 +155,14 @@
                             Background="{ThemeResource ButtonPointerOverBackgroundThemeBrush}"
                             ColumnSpacing="10">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" MinHeight="50" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                                 <RowDefinition Height="Auto" />
                             </Grid.RowDefinitions>
                             <Grid.ColumnDefinitions>
                                 <ColumnDefinition Width="Auto" MinWidth="10" />
-                                <ColumnDefinition Width="Auto" MinWidth="10" />
+                                <ColumnDefinition Width="*" MinWidth="250" />
                             </Grid.ColumnDefinitions>
                             <TextBlock
                                 Grid.Row="0"
@@ -176,7 +172,8 @@
                             <TextBlock
                                 Grid.Row="0"
                                 Grid.Column="1"
-                                Text="{x:Bind Name}" />
+                                Text="{x:Bind Name}"
+                                TextWrapping="Wrap" />
                             <TextBlock
                                 Grid.Row="1"
                                 Grid.Column="0"
