Improve portfolios page UI

--- a/FundMon/Pages/PortfoliosPage.xaml
+++ b/FundMon/Pages/PortfoliosPage.xaml
@@ -19,31 +19,75 @@
             IsDoubleTapEnabled="True"
             ItemsSource="{x:Bind ViewModel.Portfolios, Mode=OneWay}"
             SelectionChanged="GridView_SelectionChanged">
+
             <GridView.ItemTemplate>
                 <DataTemplate x:DataType="repo:Portfolio">
-                    <StackPanel Padding="10" Orientation="Vertical">
-                        <TextBlock Style="{ThemeResource SubtitleTextBlockStyle}" Text="{x:Bind Name, Mode=OneWay}" />
-                        <TextBlock Style="{ThemeResource CaptionTextBlockStyle}" Text="{x:Bind Description, Mode=OneWay}" />
-                    </StackPanel>
+                    <UserControl>
+                        <Grid
+                            MinWidth="200"
+                            MinHeight="90"
+                            Padding="10,5,10,5"
+                            Background="{ThemeResource SystemControlBackgroundBaseLowBrush}"
+                            RowSpacing="5">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <TextBlock
+                                Grid.Row="0"
+                                Style="{ThemeResource SubtitleTextBlockStyle}"
+                                Text="{x:Bind Name, Mode=OneWay}" />
+                            <TextBlock
+                                Grid.Row="1"
+                                Style="{ThemeResource CaptionTextBlockStyle}"
+                                Text="{x:Bind Description, Mode=OneWay}"
+                                TextWrapping="WrapWholeWords" />
+                        </Grid>
+                        <UserControl.ContextFlyout>
+                            <MenuFlyout>
+                                <MenuFlyout.Items>
+                                    <MenuFlyoutItem
+                                        Click="MenuFlyoutForward_Click"
+                                        Icon="Forward"
+                                        Text="Fonds" />
+                                    <MenuFlyoutItem
+                                        Click="MenuFlyoutDelete_Click"
+                                        Icon="Delete"
+                                        Text="Supprimer" />
+                                </MenuFlyout.Items>
+                            </MenuFlyout>
+                        </UserControl.ContextFlyout>
+                    </UserControl>
                 </DataTemplate>
             </GridView.ItemTemplate>
         </GridView>
-        <StackPanel Orientation="Horizontal" Spacing="10">
+
+        <Grid Margin="10" ColumnSpacing="10">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="1" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+            <Border Grid.Column="0" Background="{ThemeResource ButtonForegroundThemeBrush}" />
             <TextBox
                 x:Name="NameTextBox"
+                Grid.Column="1"
                 MinWidth="100"
                 Header="Nom"
                 TextChanged="NameTextBox_TextChanged" />
             <TextBox
                 x:Name="DescriptionTextBox"
+                Grid.Column="2"
                 MinWidth="100"
                 Header="Description" />
             <Button
                 x:Name="AddButton"
+                Grid.Column="3"
                 VerticalAlignment="Bottom"
                 Click="AddButton_Click"
                 Content="Ajouter"
                 IsEnabled="False" />
-        </StackPanel>
+        </Grid>
     </StackPanel>
 </Page>
