--- a/FundMon/Pages/PortfolioZoomPage.xaml
+++ b/FundMon/Pages/PortfolioZoomPage.xaml
@@ -39,6 +39,7 @@
         <controls1:DataGrid
             x:Name="FundDataGrid"
             MaxHeight="300"
+            Margin="10,20,10,0"
             AutoGenerateColumns="False"
             CanUserReorderColumns="False"
             ItemsSource="{x:Bind ViewModel.Performances, Mode=OneWay}"
